--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,19 @@
         android:layout_marginTop="20dp"
         android:textSize="16sp"
         android:layout_marginBottom="50dp"
-        android:text="Current:"
-
         />
+    <Button
+        android:id="@+id/clear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="14sp"
+        android:textColor="#ffffff"
+        android:padding="10dp"
+        android:background="@color/colorPrimary"
+        android:text="@string/clean_records"
+        android:layout_marginBottom="30dp" />
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_layout"
         android:layout_width="match_parent"
@@ -25,13 +35,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:background="@color/cardview_shadow_end_color"
             android:layout_margin="10dp"
-
             android:id="@+id/my_recycler_view"
             android:scrollbars="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-
-
 </LinearLayout>
